[package]
name = "rpg_tracker"
version = "0.1.0"
authors = ["storyfeet <thebeaky@psmail.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap_conf = {path="../../mlibs/clap_conf"}
serde = "1.0.103"
serde_derive = "1.0.103"
#fehler = "1.0.0-alpha.2"
failure = "0.1.6"
failure_derive = "0.1.6"

