[package]
name = "rpg_tracker"
version = "0.1.0"
authors = ["storyfeet <thebeaky@psmail.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

#nom="5.1.0"
gobble = {path="../../mlibs/gobble"}
clap_conf = {path="../../mlibs/clap_conf"}
serde = "1.0.103"
serde_derive = "1.0.103"
#fehler = "1.0.0-alpha.2"
failure = "0.1.6"
failure_derive = "0.1.6"
itertools = "0.8.2"
rand = "0.7.2"
cursive ="0.13.0"
